# perona

./: Cargo.toml  README.md  mu.db
crates/: README.md
crates/database/: Cargo.toml  mu.db  schema.sql
crates/database/src/: database.rs  lib.rs  main.rs
crates/database/src/database/: connection.rs  db.rs  mod.rs
crates/database/src/repositories/: mod.rs  player_queries.rs  player_repository.rs
crates/database/src/repositories/player/: mod.rs  player_queries.rs  player_repository.rs
crates/database/src/schema/: schema.sql
crates/memory/: Cargo.toml
crates/memory/src/: client.rs  constants.rs  entity.rs  lib.rs  memory.rs  parser.rs
crates/playerRating/: Cargo.toml
crates/playerRating/src/: constants.rs  lib.rs  player_rating.rs
crates/playerRating/tests/: player_rating_test.rs
crates/playerValidation/: Cargo.toml
crates/playerValidation/src/: constants.rs  lib.rs
crates/process/: Cargo.toml
crates/process/src/: lib.rs  process_manager.rs
crates/types/: Cargo.toml
crates/types/src/: constants.rs  lib.rs
crates/types/src/address/: client.rs  entity.rs  mod.rs
crates/types/src/player/: player.rs
crates/validation/: Cargo.toml
crates/validation/src/: constants.rs  lib.rs
docs/: crates.md
src/: main.rs
