[package]
name = "perona"
authors = ['Julie Ribeiro da Silva']
version = "0.1.0"
edition = "2024"

[dependencies]
perona-player-rating = { path = "crates/playerRating", version = "0.1.0" }
perona-validation = { path = "crates/validation", version = "0.1.0" }
perona-process = { path = "crates/process", version = "0.1.0" }
perona-memory = { path = "crates/memory", version = "0.1.0" }
perona-database = { path = "crates/database", version = "0.1.0" }
perona-types = { path = "crates/types", version = "0.1.0" }
